--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,5 @@
 CERT_FOLDER_PATH=/etc/letsencrypt/live/www.nilsbaumgartner.de-0001
 DOMAIN=nilsbaumgartner.de
-DOMAIN_PATH=/awv
+DOMAIN_PATH=/app
 BACKEND_PORT=1337
+ADMIN_JWT_SECRET=
