Working Backend with npm package plugin

--- a/Backend/app/package.json
+++ b/Backend/app/package.json
@@ -11,20 +11,23 @@
     "clean": "rm -rf ./build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
+    "base-64": "^1.0.0",
+    "geg-auth-adapter": "^1.0.1",
+    "knex": "0.21.18",
+    "nsfw-auth-studip": "^1.0.13",
+    "sqlite3": "5.0.0",
     "strapi": "3.6.8",
     "strapi-admin": "3.6.8",
-    "strapi-utils": "3.6.8",
-    "strapi-plugin-content-type-builder": "3.6.8",
-    "strapi-plugin-content-manager": "3.6.8",
-    "strapi-plugin-users-permissions": "3.6.8",
-    "strapi-plugin-email": "3.6.8",
-    "strapi-plugin-upload": "3.6.8",
-    "strapi-plugin-i18n": "3.6.8",
     "strapi-connector-bookshelf": "3.6.8",
-    "knex": "0.21.18",
-    "sqlite3": "5.0.0"
+    "strapi-plugin-content-manager": "3.6.8",
+    "strapi-plugin-content-type-builder": "3.6.8",
+    "strapi-plugin-email": "3.6.8",
+    "strapi-plugin-i18n": "3.6.8",
+    "strapi-plugin-provider-studip": "^0.0.3",
+    "strapi-plugin-upload": "3.6.8",
+    "strapi-plugin-users-permissions": "3.6.8",
+    "strapi-utils": "3.6.8"
   },
   "author": {
     "name": "A Strapi developer"
